<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="8dp"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/ave_nombre"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="PAJARO N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/ave_nombre_en"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="BIRD N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/ave_nombre_cientifico"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="Pajarus Pajarus N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avistada"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <CheckBox
            android:gravity="center"
            android:id="@+id/chequeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/activity_ave_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoaves"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.administrador.aves.Ave_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ave_foto"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnTomaFoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/camera" />

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="1dp"></LinearLayout>

                <ImageButton
                    android:id="@+id/ave_link"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/play" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info6"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info7"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <TextView
                android:id="@+id/Tituloave8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/whitesmoket"
                android:text="@string/info8"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/ave_informacion8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>
