<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="8dp"
    android:background="@drawable/cortina_1"
    tools:context="com.example.sennova.cotinga.Home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home1"/>
                <ImageButton
                    android:id="@+id/boton_avistamiento"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonvista"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45">
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home2"/>
                <ImageButton
                    android:id="@+id/boton_aves"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonaves"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home5"/>
                <ImageButton
                    android:id="@+id/boton_rutas"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonrutas"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home4"/>
                <ImageButton
                    android:id="@+id/boton_turismo"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonturismo"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home6"/>
                <ImageButton
                    android:id="@+id/boton_guias"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonguias"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="0.1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/home7"/>
                <ImageButton
                    android:id="@+id/boton_Recomendaciones"
                    android:background="#b6e1f3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/botonrecomendacion"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>
</LinearLayout>




